--- a/templates/_includes/_layout.jade
+++ b/templates/_includes/_layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title #{$.title} | #{markade.name}
+    include _favicon
     meta(name="description", content=$.description)
     meta(name="keywords", content=$.keywords)
     meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1")
